# weft

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: backend.yml  frontend.yml  sonarcloud.yml
backend/: pyproject.toml
backend/app/: config.py  deps.py  deps_sms.py  errors.py  main.py  rate_limit.py
backend/app/constants/: mime.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20a1eaa12e24_initial_schema.py  3f62b7606a45_add_circle_deleted_at.py  a1b2c3d4e5f6_add_update_circle_body.py  b2c3d4e5f6a7_rename_creator_to_owner_add_direct_transfer.py  e5ac2fcea29b_v0_2_0_notification_system_and_.py  f1a2b3c4d5e6_add_short_code_unique_index.py
backend/app/models/: __init__.py  attachment.py  circle.py  enums.py  member.py  notification.py  reply.py  token.py  topic.py  transfer.py  update.py
backend/app/routers/: _responses.py  attachments.py  auth.py  circles.py  export.py  members.py  notifications.py  replies.py  sms_webhook.py  test_seed.py  topics.py  transfer.py  updates.py
backend/app/scheduler/: jobs.py  tasks.py
backend/app/schemas/: attachment.py  auth.py  circle.py  export.py  member.py  notification.py  pagination.py  reply.py  topic.py  transfer.py  update.py
backend/app/services/: attachment.py  auth.py  circle.py  email.py  export.py  member.py  purge.py  reply.py  topic.py  transfer.py  update.py
backend/app/services/notifications/: dispatch.py  log_safe.py  mailgun_provider.py  preferences.py  provider.py  registry.py  resend_provider.py  service.py  ses_provider.py  sms_commands.py  sms_format.py  sns_provider.py  twilio_provider.py  vonage_provider.py
backend/tests/: conftest.py  test_attachment_e2e.py  test_attachments.py  test_auth.py  test_export.py  test_export_e2e.py  test_member_v2.py  test_notification_dispatch.py  test_notification_preferences.py  test_purge.py  test_remediation.py  test_replies.py  test_seed_router.py  test_sms.py  test_sms_e2e.py  test_topics.py  test_transfer.py  test_twilio_provider.py  test_visibility.py  test_vonage_provider.py  test_wave2_remediation.py  test_wave3_remediation.py
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/scripts/: start-e2e.sh
frontend/src/: app.css  app.d.ts  app.html  vite-env.d.ts
frontend/src/routes/: +layout.svelte  (+2 more)
frontend/tests/: README.md
(+93 files in other folders)
